Change service account name to ci-workflow-sa

--- a/cd/templates/argoevents.yaml
+++ b/cd/templates/argoevents.yaml
@@ -42,7 +42,7 @@ spec:
                   env: dev
                   entity-id: "{{ .Values.agentName }}"
               spec:
-                serviceAccountName: admin
+                serviceAccountName: ci-workflow-sa
                 entrypoint: deploy-workflow
                 arguments:
                   parameters:
