Replace underscore with hyphen in agent name

--- a/environments/dev/templates/agentcore-runtime.yaml
+++ b/environments/dev/templates/agentcore-runtime.yaml
@@ -1,7 +1,7 @@
 apiVersion: bedrockagentcorecontrol.services.k8s.aws/v1alpha1
 kind: AgentRuntime
 metadata:
-  name: {{ .Values.agentName }}_{{ .Values.envName }}
+  name: {{ .Values.agentName }}-{{ .Values.envName }}
   namespace: {{ .Values.agentName }}
 spec:
   agentRuntimeArtifact:
