--- a/environments/dev/values.yaml
+++ b/environments/dev/values.yaml
@@ -1,6 +1,6 @@
 agentName: agent013
 envName: dev
-agentRuntimeName: agent013
+agentRuntimeName: agent013_dev
 imageRepo: 229560443702.dkr.ecr.us-west-2.amazonaws.com
 tag: latest
 roleArn: arn:aws:iam::229560443702:role/service-role/AmazonBedrockAgentCoreRuntimeDefaultServiceRole
