Update containerURI format in agentcore-runtime.yaml

--- a/environments/dev/templates/agentcore-runtime.yaml
+++ b/environments/dev/templates/agentcore-runtime.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   agentRuntimeArtifact:
     containerConfiguration:
-      containerURI: {{ .Values.imageRepo }}:{{ .Values.tag }}
+      containerURI: {{ .Values.imageRepo }}/{{ .Values.agentName }}:{{ .Values.tag }}
   agentRuntimeName: {{ .Values.agentRuntimeName }}
   roleARN: {{ .Values.roleArn }}
   networkConfiguration:
